fixed spacing between picture and name/title at top, for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,8 @@ section {
 
 section h2 {
   padding-top: 17%;
-  font-size: 2.5vw;
+  font-size: 3.5vw;
+  color: black;
   /* padding-bottom: 1%; */
 }
 
@@ -172,10 +173,6 @@ section h2 {
 .my-paragraph {
   font-size: 2.5vw;
   margin: 20px 70px;
-}
-
-#my-projects {
-  color: rgba(0, 0, 206, 0.979);
 }
 
 .project {
@@ -237,43 +234,6 @@ section h2 {
 }
 
 @media screen and (max-width: 930px) {
-  .container-about {
-    flex-direction: column;
-    margin-top: 30px;
-    z-index: 1;
-  }
-  .intro-div {
-    font-size: 1.4em;
-  }
-
-  .my-name {
-    font-size: 7.5vw;
-  }
-
-  .my-title {
-    font-size: 5vw;
-  }
-
-  .profile-pic {
-    margin: 0;
-    padding: 0;
-  }
-
-  .my-paragraph {
-    font-size: 4vw;
-    margin: 0px 20px;
-  }
-
-  section h2 {
-    font-size: 6vw;
-  }
-
-  #my-projects h2,
-  #my-skills h2,
-  #contact-me h2 {
-    padding-top: 80px;
-  }
-
   .navbar {
     display: flex;
   }
@@ -300,6 +260,48 @@ section h2 {
     left: 3%;
   }
 
+  .container-about {
+    flex-direction: column;
+    margin-top: 30px;
+    z-index: 1;
+  }
+
+  .container-about * {
+    padding: 10px;
+  }
+
+  .intro-div {
+    font-size: 1.4em;
+  }
+
+  .my-name {
+    font-size: 7.5vw;
+  }
+
+  .my-title {
+    font-size: 5vw;
+  }
+
+  .profile-pic {
+    margin: 0;
+    padding: 0;
+  }
+
+  .my-paragraph {
+    font-size: 4vw;
+    margin: 0px 40px;
+  }
+
+  section h2 {
+    font-size: 4vw;
+  }
+
+  #my-projects h2,
+  #my-skills h2,
+  #contact-me h2 {
+    padding-top: 80px;
+  }
+
   #my-projects {
     display: flex;
     flex-direction: column;
@@ -315,6 +317,12 @@ section h2 {
 
   #divider {
     height: 100px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  section h2 {
+    font-size: 6vw;
   }
 }
 
